Adicionando rota de atenticacao e adaptando outras rotas
